# dutuuv

./: .gitignore
dutuuv_actions/: CMakeLists.txt  package.xml
dutuuv_actions/action/: DepthControl.action  LookAround.action  Move.action  ObjectTracking.action  Turn.action
dutuuv_actions/launch/: depth_control_action_server.launch
dutuuv_actions/scripts/: depth_control_action_server.py  object_tracking_action_server.py
dutuuv_bringup/: CMakeLists.txt  package.xml
dutuuv_bringup/launch/: bringup.launch  bringup_with_teleop.launch
dutuuv_control/: CMakeLists.txt  package.xml  setup.py
dutuuv_control/config/: AccelController.cfg  BalanceController.cfg  DepthController.cfg  ObjectTracking.cfg  VelocityController.cfg  WrenchControllerPid.cfg  accel_pid.yaml  depth_controller.yaml  depth_velocity_controller.yaml  guppy_properties.yaml  max_load.yaml  object_tracking.yaml  thruster_force_vs_pwm.yaml
dutuuv_control/config/tank/: inertial.yaml  vel_pid_control.yaml
dutuuv_control/include/guppy_control/: command_combinator.h  pwm_controller.h  thruster_controller.h
dutuuv_control/launch/: accel_controller.launch  all.launch  command_combinator.launch  depth_controller.launch  pwm_controller.launch  thruster_controller.launch  velocity_controller.launch
dutuuv_control/scripts/: AccelController.py  DisplacementController.py  VelocityController.py  balance_controller.py  velocity_controller.py
dutuuv_control/src/: command_combinator.cpp  pwm_controller.cpp  thruster_controller.cpp
dutuuv_control/src/dutuuv_control/: PidController.py
dutuuv_drivers/guppy_drivers/: CMakeLists.txt  package.xml  setup.py
dutuuv_msgs/: CMakeLists.txt  package.xml
dutuuv_msgs/msg/: DepthControlActionFeedback.msg  DepthControlActionGoal.msg  DepthVelocityCommand.msg  ObjectTrackingFeedback.msg  ObjectTrackingGoal.msg  Pwm.msg  PwmStamped.msg  Steering.msg  Thrust.msg  ThrustStamped.msg  TorqueCommand.msg  Velocity6DCommand.msg
dutuuv_perception/: CMakeLists.txt  package.xml
dutuuv_perception/config/: darknet_3d.yaml
dutuuv_perception/launch/: yolov5.launch  yolov5_3d.launch
dutuuv_perception/src/: white_balance.cpp
dutuuv_pickup/: CMakeLists.txt  package.xml
dutuuv_pickup/scripts/: object_tracker.py  pick_up.py
dutuuv_tasks/: CMakeLists.txt  package.xml  setup.py
dutuuv_teleop/: CMakeLists.txt  package.xml
(+205 files in other folders)
